kubernetes/test/app-test-deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artemis-test-api-deployment
  labels:
    app: artemis-test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artemis-test-api
  template:
    metadata:
      labels:
        app: artemis-test-api
    spec:
      containers:
        - name: api
          image: REPLACE_ME/artemis-launch-api:test
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          env:
            - name: REDIS_HOST
              value: artemis-test-redis-service
            - name: REDIS_PORT
              value: "6379"
            - name: DATA_FILE
              value: /data/launches.json
          volumeMounts:
            - mountPath: /data
              name: data-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: artemis-test-redis-pvc
