kubernetes/test/app-test-ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artemis-test-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: artemis-test.coe332.tacc.cloud  # replace with your class cluster host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artemis-test-api-service
                port:
                  number: 5000
