kubernetes/test/app-test-service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-test-api-service
spec:
  type: ClusterIP
  selector:
    app: artemis-test-api
  ports:
    - port: 5000
      targetPort: 5000
