kubernetes/test/app-test-service-nodeport-api.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-test-api-nodeport
spec:
  type: NodePort
  selector:
    app: artemis-test-api
  ports:
    - port: 5000
      targetPort: 5000
      # nodePort intentionally unset, k8s auto-assigns one in the 30000-32767
      # range so we don't collide with other students. Discover after deploy
      # with: kubectl get svc artemis-test-api-nodeport
