kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: artemis-test-redis-service
spec:
  type: ClusterIP
  selector:
    app: artemis-test-redis
  ports:
    - port: 6379
      targetPort: 6379
